--- a/README.html
+++ b/README.html
@@ -14,7 +14,7 @@
 
 
 <div class="video-responsive">
-<iframe src="https://www.youtube.com/watch?v=vgdBhTl44Yc" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://youtu.be/vgdBhTl44Yc" frameborder="0" allowfullscreen></iframe>
 </div>
 
 
